# patchwork-godot-plugin

./: .gitattributes  .gitignore  Cargo.toml  Developers.md  Patchwork.gdextension  Patchwork.gdextension.uid  README.md  build.env  file_system.gd  file_system.gd.uid  highlight_changes_layer.gd  highlight_shader.gdshader  justfile  patchwork.cfg.uid  patchwork_config.gd  patchwork_config.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid  register_types.cpp  sidebar.gd  sidebar.tscn  test.gd  test.gd.uid  update_version.py
.cargo/: config.toml
.github/actions/build-plugin/: action.yml
.github/actions/macos-sign/: action.yml
.github/actions/restore-plugin-cache/: action.yml
.github/actions/save-plugin-cache/: action.yml
.github/actions/windows-sign/: action.yml
.github/workflows/: all_builds.yml  all_editor_builds.yml  compose_projects.yml  linux_builds.yml  macos_builds.yml  merge_builds.yml  prepare_composite.yml  release.yml  runner.yml  windows_builds.yml
assets/: branch-picker.webp.import  diff.webp.import  history.webp.import  import-project.webp.import  merge-preview.webp.import  plugin-tab.webp.import  release-page.webp.import  set-user-name.webp.import  unzipped-files.webp.import
editor/: SCsub  config.py  diff_inspector.cpp  diff_inspector.h  diff_result.cpp  diff_result.h  patchwork_editor.cpp  patchwork_editor.h  register_types.cpp  register_types.h  text_diff.cpp  text_diff.h
gdscript/: diff_editor_theme.tres  diff_inspector_container.gd  diff_stylebox_tex.png.import  file_system.gd  file_system.gd.uid  highlight_changes_layer.gd  highlight_shader.gdshader  plugin.gd  plugin.gd.uid  sidebar.gd  sidebar.tscn  sticky_note.tscn  task_modal.gd  test_Scene.tscn  thing.png.import  utils.gd
godot/: file_change_listener.gd  file_system.gd  patchwork_config.gd  plugin.gd  sidebar.gd  sidebar.tscn
icons/: GuiTabMenuHl.svg.import  GuiTabMenuHl_rotated.svg.import  arrow.svg.import  branch-icon-history.svg.import  branch-icon.svg.import  checkmark-circle.svg.import  circle-alert.svg.import  circle-check.svg.import  circle-dashed-warning.svg.import  circle-dashed.svg.import  circle-sync.svg.import  circle.svg.import  collapsable-closed.svg.import  collapsable-open.svg.import  edit-two-svgrepo-com.svg.import  person.svg.import  remove-svgrepo-com.svg.import  sign-add-svgrepo-com.svg.import  sync.svg.import  undo-redo.svg.import  warning-circle.svg.import  warning.svg.import
public/gdscript/: diff_inspector_container.gd  diff_stylebox_tex.png.import  highlight_changes_layer.gd  sidebar.gd  sidebar.tscn  sticky_note.tscn  test_Scene.tscn  thing.png.import
public/icons/: GuiTabMenuHl.svg.import  GuiTabMenuHl_rotated.svg.import  arrow.svg.import  branch-icon-history.svg.import  branch-icon.svg.import  checkmark-circle.svg.import  circle-alert.svg.import  circle-check.svg.import  circle-dashed-warning.svg.import  circle-dashed.svg.import  circle-sync.svg.import  circle.svg.import  collapsable-closed.svg.import  collapsable-open.svg.import  edit-two-svgrepo-com.svg.import  person.svg.import  remove-svgrepo-com.svg.import  sign-add-svgrepo-com.svg.import  sync.svg.import  undo-redo.svg.import  warning-circle.svg.import  warning.svg.import
rust/: Cargo.toml
rust/plugin/: Cargo.toml  build.rs  post_build.rs  test_output.txt
rust/plugin/macos/libpatchwork_rust_core.macos.framework/Resources/: Info.plist
rust/plugin/src/: automerge_fs.rs  branch.rs  custom_logging_fmt.rs  diff.rs  differ.rs  doc_utils.rs  file_system_driver.rs  file_utils.rs  fs.rs  godot_accessors.rs  godot_helpers.rs  godot_parser.rs  godot_project.rs  godot_project_api.rs  godot_project_driver.rs  godot_project_impl.rs  godot_project_view_model_impl.rs  godot_scene.rs  interop.rs  lib.rs  patches.rs  patchwork_config.rs  project.rs  storage_utils.rs  test.rs  utils.rs
rust/plugin/src/diff/: differ.rs  resource_differ.rs  scene_differ.rs  text_differ.rs
rust/plugin/src/fs/: file_system_driver.rs  file_utils.rs
rust/plugin/src/helpers/: branch.rs  tracing.rs  utils.rs
rust/plugin/src/interop/: diff_inspector_section.rs  extension.rs  godot_accessors.rs  godot_diffs.rs  godot_helpers.rs  godot_project.rs  patchwork_config.rs
rust/plugin/src/parser/: godot_parser.rs
rust/plugin/src/project/: godot_project_api.rs  godot_project_driver.rs  godot_project_impl.rs  godot_project_view_model_impl.rs  project.rs  project_api.rs  project_api_impl.rs  project_driver.rs
rust/plugin/src/project/project/: project_diff.rs
rust/plugin/tests/: test.rs
rust/server/: server.rs
rust/src/: fs.rs  helpers.rs  interop.rs  parser.rs  project.rs
rust/src/diff/: differ.rs  resource_differ.rs  scene_differ.rs  text_differ.rs
rust/src/fs/: file_system_driver.rs  file_utils.rs
rust/src/fs/file_system_driver/: tests.rs
rust/src/helpers/: autosurgeon_utils.rs  branch.rs  doc_utils.rs  history_path.rs  history_ref.rs  spawn_utils.rs  tracing.rs  utils.rs
rust/src/interop/: diff_inspector_section.rs  extension.rs  godot_accessors.rs  godot_diffs.rs  godot_helpers.rs  godot_project.rs  lazy_load_token.rs  patchwork_resource_loader.rs  text_differ_view.rs
rust/src/parser/: godot_parser.rs  parser_defs.rs  variant_parser.rs
rust/src/parser/godot_parser/: tests.rs
rust/src/parser/variant_parser/: test.rs
rust/src/project/: branch_db.rs  branch_doc_wrapper.rs  change_ingester.rs  connection.rs  document_watcher.rs  driver.rs  fs_watcher.rs  main_thread_block.rs  new_project.rs  peer_watcher.rs  project.rs  project_api.rs  project_api_impl.rs  project_driver.rs  sync_automerge_to_fs.rs  sync_fs_to_automerge.rs
rust/src/project/branch_db/: branch.rs  branch_sync.rs  commit.rs  file.rs  history_ref.rs  merge_revert.rs  util.rs
rust/src/project/driver/: tests.rs
rust/src/project/main_thread_block/: test.rs
rust/tests/: test.rs
