# workspace is in rust
[workspace]
members = [
    "rust",
]


# create profile release_debug
[profile.release_debug]
inherits = "release"
opt-level = 0
strip = "none"
debug = true
lto = false
panic = "abort"
codegen-units = 1
panic-strategy = "abort"
#config flag "release_debug"

# set release_debug as default profile
default = ["release_debug"]
