[package]
name = "patchwork_rust"
version = "0.0.1"
authors = [
  "Orion Henry <orion.henry@gmail.com>",
  "Jason Kankiewicz <jason.kankiewicz@gmail.com>",
]
edition = "2024"
license = "MIT"
rust-version = "1.91.1"

[lib]
name = "patchwork_rust_core"
crate-type = ["cdylib", "staticlib", "rlib"]
bench = false
doc = false

[features]
default = []
automerge_0_6 = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
automerge = "0.7.2"
# path at /Users/nikita/Workspace/autosurgeon/autosurgeon
# autosurgeon = { path = "/Users/nikita/Workspace/autosurgeon/autosurgeon" }
autosurgeon = { git = "https://github.com/nikitalita/autosurgeon.git", branch = "with-tuples" }
futures = "0.3.31"
godot = {version = "0.4.5", features = ["experimental-threads"]}
tokio = { version = "1.49.0", features = ["full"] }
console-subscriber = { version = "0.5.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tree-sitter = "0.25.4"
tree-sitter-godot-resource = { git = "https://github.com/nikitalita/tree-sitter-godot-resource.git", branch = "fix-string-names" }
safer-ffi = "0.1.13"
serde_json = "1.0.138"
base64 = "0.22"
lexical = { version = "7.0.5", features = ["format"] }
num-traits = "0.2.19"
indexmap = "2.13.0"
uuid = "1.5.0"
pretty_assertions = "1.4.1"
similar = { version = "2.4.0", features = ["unicode"] }
# notify = { version = "8.0.0", features = ["macos_kqueue"] }
notify = { git = "https://github.com/nikitalita/notify", features = [
  "macos_fsevent",
] }
notify-debouncer-mini = { git = "https://github.com/nikitalita/notify", features = [
  "macos_fsevent",
] }
rand = "0.9.2"
# notify = { path = "/Users/nikita/Workspace/godot-ws/notify/notify", features = ["macos_kqueue"] }
# notify-debouncer-mini = { path = "/Users/nikita/Workspace/godot-ws/notify/notify-debouncer-mini", features = ["macos_kqueue"] }


# patchwork_rust_post_build_script = { path = "patchwork_rust_post_build_script" }
serde = { version = "1.0", features = ["derive"] }
md5 = "0.8.0"
glob = "0.3.1"
rlimit = "0.10.2"
tracing = "0.1.40"
tracing-appender = "0.2.2"
chrono = "0.4.31"
samod = { version="0.7.1", features = ["tokio", "threadpool", "tungstenite"] }
rayon = "1.11.0"
regex = "1.12.2"
tokio-tungstenite = "0.27.0"
async-stream = "0.3.6"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"

[build-dependencies]
cbindgen = "^0.27"
cargo-post = "0.1.7"
static_vcruntime = "2.0"

[dev-dependencies]
tempfile = "3.0"
