[package]
name = "patchwork_rust"
version = "0.0.1"
authors = [
  "Orion Henry <orion.henry@gmail.com>",
  "Jason Kankiewicz <jason.kankiewicz@gmail.com>",
]
edition = "2021"
license = "MIT"
rust-version = "1.57.0"

[lib]
name = "patchwork_rust_core"
crate-type = ["cdylib", "staticlib", "rlib"]
bench = false
doc = false

[dependencies]
automerge = "0.6.0"
automerge_repo = { git = "https://github.com/automerge/automerge-repo-rs", branch = "peer-conn-info-changes", features = [
  "tokio",
] }
autosurgeon = "0.8.7"
futures = "0.3.31"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
  "experimental-threads",
] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tree-sitter = "0.20.10"
tree-sitter-godot-resource = { git = "https://github.com/PrestonKnopp/tree-sitter-godot-resource.git", rev = "74105cc46a09850ebe626b894ecc6c61a12fb999" }
safer-ffi = "0.1.13"
serde_json = "1.0.138"
uuid = "1.5.0"
pretty_assertions = "1.4.1"
similar = { version = "2.4.0", features = ["unicode"] }
notify = "5.2.0"
# patchwork_rust_post_build_script = { path = "patchwork_rust_post_build_script" }
serde = { version = "1.0", features = ["derive"] }
yet-another-md5 = "2.0.0"
glob = "0.3.1"

[build-dependencies]
cbindgen = "^0.27"
cargo-post = "0.1.7"

[dev-dependencies]
tempfile = "3.0"
